[tool.poetry]
name = "youtube-search"
version = "0.1.0"
description = ""
authors = ["hskimim <hskimim8855@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "2.28.1"
urllib3 = "1.26.5"
idna = "2.10"
chardet = "3.0.4"
certifi = "2020.6.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
